--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/images/logoahoa.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="	https://slimweb.vn/site/cuahangbanhoa/images/user/17245/logoahoa.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="day la mot trang web" />
     <meta name="keywords" content="hello haidang" />
